# mcdc-example

./: .ctc.ini  CMakeLists.txt  README.md
include/: Foo.hh  Printer.hh  TrackedValue.hh
source/: Foo.cpp  Printer.cpp  TrackedValue.tpp
unit_test/: PrinterTest.cpp  TrackedValueTest.cpp
